Spin/Src6.4.9/y.output
   0  $accept : program $end

   1  program : units

   2  units : unit
   3        | units unit

   4  unit : proc
   5       | init
   6       | claim
   7       | ltl
   8       | events
   9       | one_decl
  10       | utype
  11       | c_fcts
  12       | ns
  13       | semi
  14       | error

  15  l_par : '('

  16  r_par : ')'

  17  $$1 :

  18  $$2 :

  19  proc : inst proctype NAME $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body

  20  proctype : PROCTYPE
  21           | D_PROCTYPE

  22  inst :
  23       | ACTIVE
  24       | ACTIVE '[' const_expr ']'
  25       | ACTIVE '[' NAME ']'

  26  $$3 :

  27  init : INIT $$3 Opt_priority body

  28  $$4 :

  29  ltl : LTL optname2 $$4 ltl_body

  30  ltl_body : '{' full_expr OS '}'
  31           | error

  32  $$5 :

  33  claim : CLAIM optname $$5 body

  34  optname :
  35          | NAME

  36  optname2 :
  37           | NAME

  38  $$6 :

  39  events : TRACE $$6 body

  40  $$7 :

  41  utype : TYPEDEF NAME '{' $$7 decl_lst '}'

  42  nm : NAME
  43     | INAME

  44  $$8 :

  45  ns : INLINE nm l_par $$8 args r_par

  46  c_fcts : ccode
  47         | cstate

  48  cstate : C_STATE STRING STRING
  49         | C_TRACK STRING STRING
  50         | C_STATE STRING STRING STRING
  51         | C_TRACK STRING STRING STRING

  52  ccode : C_CODE
  53        | C_DECL

  54  cexpr : C_EXPR

  55  $$9 :

  56  $$10 :

  57  body : '{' $$9 sequence OS $$10 '}'

  58  sequence : step
  59           | sequence MS step

  60  step : one_decl
  61       | XU vref_lst
  62       | NAME ':' one_decl
  63       | NAME ':' XU
  64       | stmnt

  65  $$11 :

  66  step : stmnt UNLESS $$11 stmnt
  67       | error

  68  vis :
  69      | HIDDEN
  70      | SHOW
  71      | ISLOCAL

  72  asgn :
  73       | ':' NAME ASGN
  74       | ASGN

  75  osubt :
  76        | ':' NAME

  77  one_decl : vis TYPE osubt var_list
  78           | vis UNAME var_list
  79           | vis TYPE asgn '{' nlst '}'

  80  decl_lst : one_decl
  81           | one_decl SEMI decl_lst

  82  decl :
  83       | decl_lst

  84  vref_lst : varref
  85           | varref ',' vref_lst

  86  var_list : ivar
  87           | ivar ',' var_list

  88  c_list : CONST
  89         | CONST ',' c_list

  90  ivar : vardcl
  91       | vardcl ASGN '{' c_list '}'
  92       | vardcl ASGN expr
  93       | vardcl ASGN ch_init

  94  ch_init : '[' const_expr ']' OF '{' typ_list '}'

  95  vardcl : NAME
  96         | NAME ':' CONST
  97         | NAME '[' const_expr ']'
  98         | NAME '[' NAME ']'

  99  varref : cmpnd

 100  pfld : NAME

 101  $$12 :

 102  pfld : NAME $$12 '[' expr ']'

 103  $$13 :

 104  cmpnd : pfld $$13 sfld

 105  sfld :
 106       | '.' cmpnd

 107  stmnt : Special
 108        | Stmnt

 109  $$14 :

 110  for_pre : FOR l_par $$14 varref

 111  for_post : '{' sequence OS '}'
 112           | SEMI '{' sequence OS '}'

 113  $$15 :

 114  Special : varref RCV $$15 rargs

 115  $$16 :

 116  Special : varref SND $$16 margs

 117  $$17 :

 118  Special : for_pre ':' expr DOTDOT expr r_par $$17 for_post

 119  $$18 :

 120  Special : for_pre IN varref r_par $$18 for_post
 121          | SELECT l_par varref ':' expr DOTDOT expr r_par
 122          | IF options FI

 123  $$19 :

 124  Special : DO $$19 options OD
 125          | BREAK
 126          | GOTO NAME
 127          | NAME ':' stmnt
 128          | NAME ':'
 129          | error

 130  Stmnt : varref ASGN full_expr
 131        | varref INCR
 132        | varref DECR
 133        | SET_P l_par two_args r_par

 134  $$20 :

 135  Stmnt : PRINT l_par STRING $$20 prargs r_par
 136        | PRINTM l_par varref r_par
 137        | PRINTM l_par CONST r_par
 138        | ASSERT full_expr
 139        | ccode

 140  $$21 :

 141  Stmnt : varref R_RCV $$21 rargs

 142  $$22 :

 143  Stmnt : varref RCV $$22 LT rargs GT

 144  $$23 :

 145  Stmnt : varref R_RCV $$23 LT rargs GT

 146  $$24 :

 147  Stmnt : varref O_SND $$24 margs
 148        | full_expr
 149        | ELSE

 150  $$25 :

 151  Stmnt : ATOMIC '{' $$25 sequence OS '}'

 152  $$26 :

 153  Stmnt : D_STEP '{' $$26 sequence OS '}'

 154  $$27 :

 155  Stmnt : '{' $$27 sequence OS '}'

 156  $$28 :

 157  $$29 :

 158  Stmnt : INAME $$28 l_par args r_par $$29 Stmnt

 159  $$30 :

 160  $$31 :

 161  Stmnt : varref ASGN INAME $$30 l_par args r_par $$31 Stmnt
 162        | RETURN full_expr

 163  options : option
 164          | option options

 165  $$32 :

 166  option : SEP $$32 sequence OS

 167  OS :
 168     | semi

 169  semi : SEMI
 170       | ARROW

 171  MS : semi
 172     | MS semi

 173  aname : NAME
 174        | PNAME

 175  const_expr : CONST
 176             | '-' const_expr
 177             | l_par const_expr r_par
 178             | const_expr '+' const_expr
 179             | const_expr '-' const_expr
 180             | const_expr '*' const_expr
 181             | const_expr '/' const_expr
 182             | const_expr '%' const_expr

 183  expr : l_par expr r_par
 184       | expr '+' expr
 185       | expr '-' expr
 186       | expr '*' expr
 187       | expr '/' expr
 188       | expr '%' expr
 189       | expr '&' expr
 190       | expr '^' expr
 191       | expr '|' expr
 192       | expr GT expr
 193       | expr LT expr
 194       | expr GE expr
 195       | expr LE expr
 196       | expr EQ expr
 197       | expr NE expr
 198       | expr AND expr
 199       | expr OR expr
 200       | expr LSHIFT expr
 201       | expr RSHIFT expr
 202       | '~' expr
 203       | '-' expr
 204       | SND expr
 205       | l_par expr ARROW expr ':' expr r_par

 206  $$33 :

 207  expr : RUN aname $$33 l_par args r_par Opt_priority
 208       | LEN l_par varref r_par
 209       | ENABLED l_par expr r_par
 210       | GET_P l_par expr r_par

 211  $$34 :

 212  expr : varref RCV $$34 '[' rargs ']'

 213  $$35 :

 214  expr : varref R_RCV $$35 '[' rargs ']'
 215       | varref
 216       | cexpr
 217       | CONST
 218       | TIMEOUT
 219       | NONPROGRESS
 220       | PC_VAL l_par expr r_par
 221       | PNAME '[' expr ']' '@' NAME
 222       | PNAME '[' expr ']' ':' pfld
 223       | PNAME '@' NAME
 224       | PNAME ':' pfld
 225       | ltl_expr

 226  Opt_priority :
 227               | PRIORITY CONST

 228  full_expr : expr
 229            | Expr

 230  ltl_expr : expr UNTIL expr
 231           | expr RELEASE expr
 232           | expr WEAK_UNTIL expr
 233           | expr IMPLIES expr
 234           | expr EQUIV expr
 235           | NEXT expr
 236           | ALWAYS expr
 237           | EVENTUALLY expr

 238  Expr : Probe
 239       | l_par Expr r_par
 240       | Expr AND Expr
 241       | Expr AND expr
 242       | expr AND Expr
 243       | Expr OR Expr
 244       | Expr OR expr
 245       | expr OR Expr

 246  Probe : FULL l_par varref r_par
 247        | NFULL l_par varref r_par
 248        | EMPTY l_par varref r_par
 249        | NEMPTY l_par varref r_par

 250  Opt_enabler :
 251              | PROVIDED l_par full_expr r_par
 252              | PROVIDED error

 253  oname :
 254        | ':' NAME

 255  basetype : TYPE oname
 256           | UNAME
 257           | error

 258  typ_list : basetype
 259           | basetype ',' typ_list

 260  two_args : expr ',' expr

 261  args :
 262       | arg

 263  prargs :
 264         | ',' arg

 265  margs : arg
 266        | expr l_par arg r_par

 267  arg : expr
 268      | expr ',' arg

 269  rarg : varref
 270       | EVAL l_par expr r_par
 271       | CONST
 272       | '-' CONST

 273  rargs : rarg
 274        | rarg ',' rargs
 275        | rarg l_par rargs r_par
 276        | l_par rargs r_par

 277  nlst : NAME
 278       | nlst NAME
 279       | nlst ','

state 0
	$accept : . program $end  (0)
	inst : .  (22)
	vis : .  (68)

	error  shift 1
	C_CODE  shift 2
	C_DECL  shift 3
	C_STATE  shift 4
	C_TRACK  shift 5
	TYPEDEF  shift 6
	INLINE  shift 7
	SEMI  shift 8
	ARROW  shift 9
	ACTIVE  shift 10
	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	CLAIM  shift 14
	TRACE  shift 15
	INIT  shift 16
	LTL  shift 17
	PROCTYPE  reduce 22
	D_PROCTYPE  reduce 22
	TYPE  reduce 68
	UNAME  reduce 68

	program  goto 18
	units  goto 19
	unit  goto 20
	proc  goto 21
	init  goto 22
	claim  goto 23
	ltl  goto 24
	events  goto 25
	one_decl  goto 26
	utype  goto 27
	c_fcts  goto 28
	ns  goto 29
	semi  goto 30
	inst  goto 31
	ccode  goto 32
	cstate  goto 33
	vis  goto 34


state 1
	unit : error .  (14)

	.  reduce 14


state 2
	ccode : C_CODE .  (52)

	.  reduce 52


state 3
	ccode : C_DECL .  (53)

	.  reduce 53


state 4
	cstate : C_STATE . STRING STRING  (48)
	cstate : C_STATE . STRING STRING STRING  (50)

	STRING  shift 35
	.  error


state 5
	cstate : C_TRACK . STRING STRING  (49)
	cstate : C_TRACK . STRING STRING STRING  (51)

	STRING  shift 36
	.  error


state 6
	utype : TYPEDEF . NAME '{' $$7 decl_lst '}'  (41)

	NAME  shift 37
	.  error


state 7
	ns : INLINE . nm l_par $$8 args r_par  (45)

	NAME  shift 38
	INAME  shift 39
	.  error

	nm  goto 40


state 8
	semi : SEMI .  (169)

	.  reduce 169


state 9
	semi : ARROW .  (170)

	.  reduce 170


state 10
	inst : ACTIVE .  (23)
	inst : ACTIVE . '[' const_expr ']'  (24)
	inst : ACTIVE . '[' NAME ']'  (25)

	'['  shift 41
	PROCTYPE  reduce 23
	D_PROCTYPE  reduce 23


state 11
	vis : HIDDEN .  (69)

	.  reduce 69


state 12
	vis : SHOW .  (70)

	.  reduce 70


state 13
	vis : ISLOCAL .  (71)

	.  reduce 71


state 14
	claim : CLAIM . optname $$5 body  (33)
	optname : .  (34)

	NAME  shift 42
	'{'  reduce 34

	optname  goto 43


state 15
	events : TRACE . $$6 body  (39)
	$$6 : .  (38)

	.  reduce 38

	$$6  goto 44


state 16
	init : INIT . $$3 Opt_priority body  (27)
	$$3 : .  (26)

	.  reduce 26

	$$3  goto 45


state 17
	ltl : LTL . optname2 $$4 ltl_body  (29)
	optname2 : .  (36)

	NAME  shift 46
	error  reduce 36
	'{'  reduce 36

	optname2  goto 47


state 18
	$accept : program . $end  (0)

	$end  accept


state 19
	program : units .  (1)
	units : units . unit  (3)
	inst : .  (22)
	vis : .  (68)

	error  shift 1
	C_CODE  shift 2
	C_DECL  shift 3
	C_STATE  shift 4
	C_TRACK  shift 5
	TYPEDEF  shift 6
	INLINE  shift 7
	SEMI  shift 8
	ARROW  shift 9
	ACTIVE  shift 10
	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	CLAIM  shift 14
	TRACE  shift 15
	INIT  shift 16
	LTL  shift 17
	$end  reduce 1
	PROCTYPE  reduce 22
	D_PROCTYPE  reduce 22
	TYPE  reduce 68
	UNAME  reduce 68

	unit  goto 48
	proc  goto 21
	init  goto 22
	claim  goto 23
	ltl  goto 24
	events  goto 25
	one_decl  goto 26
	utype  goto 27
	c_fcts  goto 28
	ns  goto 29
	semi  goto 30
	inst  goto 31
	ccode  goto 32
	cstate  goto 33
	vis  goto 34


state 20
	units : unit .  (2)

	.  reduce 2


state 21
	unit : proc .  (4)

	.  reduce 4


state 22
	unit : init .  (5)

	.  reduce 5


state 23
	unit : claim .  (6)

	.  reduce 6


state 24
	unit : ltl .  (7)

	.  reduce 7


state 25
	unit : events .  (8)

	.  reduce 8


state 26
	unit : one_decl .  (9)

	.  reduce 9


state 27
	unit : utype .  (10)

	.  reduce 10


state 28
	unit : c_fcts .  (11)

	.  reduce 11


state 29
	unit : ns .  (12)

	.  reduce 12


state 30
	unit : semi .  (13)

	.  reduce 13


state 31
	proc : inst . proctype NAME $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)

	PROCTYPE  shift 49
	D_PROCTYPE  shift 50
	.  error

	proctype  goto 51


state 32
	c_fcts : ccode .  (46)

	.  reduce 46


state 33
	c_fcts : cstate .  (47)

	.  reduce 47


state 34
	one_decl : vis . TYPE osubt var_list  (77)
	one_decl : vis . UNAME var_list  (78)
	one_decl : vis . TYPE asgn '{' nlst '}'  (79)

	TYPE  shift 52
	UNAME  shift 53
	.  error


state 35
	cstate : C_STATE STRING . STRING  (48)
	cstate : C_STATE STRING . STRING STRING  (50)

	STRING  shift 54
	.  error


state 36
	cstate : C_TRACK STRING . STRING  (49)
	cstate : C_TRACK STRING . STRING STRING  (51)

	STRING  shift 55
	.  error


state 37
	utype : TYPEDEF NAME . '{' $$7 decl_lst '}'  (41)

	'{'  shift 56
	.  error


state 38
	nm : NAME .  (42)

	.  reduce 42


state 39
	nm : INAME .  (43)

	.  reduce 43


state 40
	ns : INLINE nm . l_par $$8 args r_par  (45)

	'('  shift 57
	.  error

	l_par  goto 58


state 41
	inst : ACTIVE '[' . const_expr ']'  (24)
	inst : ACTIVE '[' . NAME ']'  (25)

	CONST  shift 59
	NAME  shift 60
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 63


state 42
	optname : NAME .  (35)

	.  reduce 35


state 43
	claim : CLAIM optname . $$5 body  (33)
	$$5 : .  (32)

	.  reduce 32

	$$5  goto 64


state 44
	events : TRACE $$6 . body  (39)

	'{'  shift 65
	.  error

	body  goto 66


state 45
	init : INIT $$3 . Opt_priority body  (27)
	Opt_priority : .  (226)

	PRIORITY  shift 67
	'{'  reduce 226

	Opt_priority  goto 68


state 46
	optname2 : NAME .  (37)

	.  reduce 37


state 47
	ltl : LTL optname2 . $$4 ltl_body  (29)
	$$4 : .  (28)

	.  reduce 28

	$$4  goto 69


state 48
	units : units unit .  (3)

	.  reduce 3


state 49
	proctype : PROCTYPE .  (20)

	.  reduce 20


state 50
	proctype : D_PROCTYPE .  (21)

	.  reduce 21


state 51
	proc : inst proctype . NAME $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)

	NAME  shift 70
	.  error


state 52
	one_decl : vis TYPE . osubt var_list  (77)
	one_decl : vis TYPE . asgn '{' nlst '}'  (79)
	asgn : .  (72)
	osubt : .  (75)

	ASGN  shift 71
	':'  shift 72
	NAME  reduce 75
	'{'  reduce 72

	asgn  goto 73
	osubt  goto 74


state 53
	one_decl : vis UNAME . var_list  (78)

	NAME  shift 75
	.  error

	var_list  goto 76
	ivar  goto 77
	vardcl  goto 78


state 54
	cstate : C_STATE STRING STRING .  (48)
	cstate : C_STATE STRING STRING . STRING  (50)

	STRING  shift 79
	$end  reduce 48
	error  reduce 48
	C_CODE  reduce 48
	C_DECL  reduce 48
	C_STATE  reduce 48
	C_TRACK  reduce 48
	TYPEDEF  reduce 48
	INLINE  reduce 48
	SEMI  reduce 48
	ARROW  reduce 48
	ACTIVE  reduce 48
	PROCTYPE  reduce 48
	D_PROCTYPE  reduce 48
	HIDDEN  reduce 48
	SHOW  reduce 48
	ISLOCAL  reduce 48
	TYPE  reduce 48
	UNAME  reduce 48
	CLAIM  reduce 48
	TRACE  reduce 48
	INIT  reduce 48
	LTL  reduce 48


state 55
	cstate : C_TRACK STRING STRING .  (49)
	cstate : C_TRACK STRING STRING . STRING  (51)

	STRING  shift 80
	$end  reduce 49
	error  reduce 49
	C_CODE  reduce 49
	C_DECL  reduce 49
	C_STATE  reduce 49
	C_TRACK  reduce 49
	TYPEDEF  reduce 49
	INLINE  reduce 49
	SEMI  reduce 49
	ARROW  reduce 49
	ACTIVE  reduce 49
	PROCTYPE  reduce 49
	D_PROCTYPE  reduce 49
	HIDDEN  reduce 49
	SHOW  reduce 49
	ISLOCAL  reduce 49
	TYPE  reduce 49
	UNAME  reduce 49
	CLAIM  reduce 49
	TRACE  reduce 49
	INIT  reduce 49
	LTL  reduce 49


state 56
	utype : TYPEDEF NAME '{' . $$7 decl_lst '}'  (41)
	$$7 : .  (40)

	.  reduce 40

	$$7  goto 81


state 57
	l_par : '(' .  (15)

	.  reduce 15


state 58
	ns : INLINE nm l_par . $$8 args r_par  (45)
	$$8 : .  (44)

	.  reduce 44

	$$8  goto 82


state 59
	const_expr : CONST .  (175)

	.  reduce 175


state 60
	inst : ACTIVE '[' NAME . ']'  (25)

	']'  shift 83
	.  error


state 61
	const_expr : '-' . const_expr  (176)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 84


state 62
	const_expr : l_par . const_expr r_par  (177)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 85


state 63
	inst : ACTIVE '[' const_expr . ']'  (24)
	const_expr : const_expr . '+' const_expr  (178)
	const_expr : const_expr . '-' const_expr  (179)
	const_expr : const_expr . '*' const_expr  (180)
	const_expr : const_expr . '/' const_expr  (181)
	const_expr : const_expr . '%' const_expr  (182)

	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'%'  shift 90
	']'  shift 91
	.  error


state 64
	claim : CLAIM optname $$5 . body  (33)

	'{'  shift 65
	.  error

	body  goto 92


state 65
	body : '{' . $$9 sequence OS $$10 '}'  (57)
	$$9 : .  (55)

	.  reduce 55

	$$9  goto 93


state 66
	events : TRACE $$6 body .  (39)

	.  reduce 39


state 67
	Opt_priority : PRIORITY . CONST  (227)

	CONST  shift 94
	.  error


state 68
	init : INIT $$3 Opt_priority . body  (27)

	'{'  shift 65
	.  error

	body  goto 95


state 69
	ltl : LTL optname2 $$4 . ltl_body  (29)

	error  shift 96
	'{'  shift 97
	.  error

	ltl_body  goto 98


state 70
	proc : inst proctype NAME . $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)
	$$1 : .  (17)

	.  reduce 17

	$$1  goto 99


state 71
	asgn : ASGN .  (74)

	.  reduce 74


state 72
	asgn : ':' . NAME ASGN  (73)
	osubt : ':' . NAME  (76)

	NAME  shift 100
	.  error


state 73
	one_decl : vis TYPE asgn . '{' nlst '}'  (79)

	'{'  shift 101
	.  error


state 74
	one_decl : vis TYPE osubt . var_list  (77)

	NAME  shift 75
	.  error

	var_list  goto 102
	ivar  goto 77
	vardcl  goto 78


state 75
	vardcl : NAME .  (95)
	vardcl : NAME . ':' CONST  (96)
	vardcl : NAME . '[' const_expr ']'  (97)
	vardcl : NAME . '[' NAME ']'  (98)

	'['  shift 103
	':'  shift 104
	$end  reduce 95
	error  reduce 95
	C_CODE  reduce 95
	C_DECL  reduce 95
	C_STATE  reduce 95
	C_TRACK  reduce 95
	TYPEDEF  reduce 95
	INLINE  reduce 95
	SEMI  reduce 95
	ARROW  reduce 95
	FI  reduce 95
	OD  reduce 95
	SEP  reduce 95
	ACTIVE  reduce 95
	PROCTYPE  reduce 95
	D_PROCTYPE  reduce 95
	HIDDEN  reduce 95
	SHOW  reduce 95
	ISLOCAL  reduce 95
	TYPE  reduce 95
	UNAME  reduce 95
	CLAIM  reduce 95
	TRACE  reduce 95
	INIT  reduce 95
	LTL  reduce 95
	ASGN  reduce 95
	')'  reduce 95
	'}'  reduce 95
	','  reduce 95


state 76
	one_decl : vis UNAME var_list .  (78)

	.  reduce 78


state 77
	var_list : ivar .  (86)
	var_list : ivar . ',' var_list  (87)

	','  shift 105
	$end  reduce 86
	error  reduce 86
	C_CODE  reduce 86
	C_DECL  reduce 86
	C_STATE  reduce 86
	C_TRACK  reduce 86
	TYPEDEF  reduce 86
	INLINE  reduce 86
	SEMI  reduce 86
	ARROW  reduce 86
	FI  reduce 86
	OD  reduce 86
	SEP  reduce 86
	ACTIVE  reduce 86
	PROCTYPE  reduce 86
	D_PROCTYPE  reduce 86
	HIDDEN  reduce 86
	SHOW  reduce 86
	ISLOCAL  reduce 86
	TYPE  reduce 86
	UNAME  reduce 86
	CLAIM  reduce 86
	TRACE  reduce 86
	INIT  reduce 86
	LTL  reduce 86
	')'  reduce 86
	'}'  reduce 86


state 78
	ivar : vardcl .  (90)
	ivar : vardcl . ASGN '{' c_list '}'  (91)
	ivar : vardcl . ASGN expr  (92)
	ivar : vardcl . ASGN ch_init  (93)

	ASGN  shift 106
	$end  reduce 90
	error  reduce 90
	C_CODE  reduce 90
	C_DECL  reduce 90
	C_STATE  reduce 90
	C_TRACK  reduce 90
	TYPEDEF  reduce 90
	INLINE  reduce 90
	SEMI  reduce 90
	ARROW  reduce 90
	FI  reduce 90
	OD  reduce 90
	SEP  reduce 90
	ACTIVE  reduce 90
	PROCTYPE  reduce 90
	D_PROCTYPE  reduce 90
	HIDDEN  reduce 90
	SHOW  reduce 90
	ISLOCAL  reduce 90
	TYPE  reduce 90
	UNAME  reduce 90
	CLAIM  reduce 90
	TRACE  reduce 90
	INIT  reduce 90
	LTL  reduce 90
	')'  reduce 90
	'}'  reduce 90
	','  reduce 90


state 79
	cstate : C_STATE STRING STRING STRING .  (50)

	.  reduce 50


state 80
	cstate : C_TRACK STRING STRING STRING .  (51)

	.  reduce 51


state 81
	utype : TYPEDEF NAME '{' $$7 . decl_lst '}'  (41)
	vis : .  (68)

	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	TYPE  reduce 68
	UNAME  reduce 68

	one_decl  goto 107
	decl_lst  goto 108
	vis  goto 34


state 82
	ns : INLINE nm l_par $$8 . args r_par  (45)
	args : .  (261)

	C_EXPR  shift 109
	RUN  shift 110
	LEN  shift 111
	ENABLED  shift 112
	GET_P  shift 113
	PC_VAL  shift 114
	TIMEOUT  shift 115
	NONPROGRESS  shift 116
	CONST  shift 117
	NAME  shift 118
	PNAME  shift 119
	SND  shift 120
	ALWAYS  shift 121
	EVENTUALLY  shift 122
	NEXT  shift 123
	'-'  shift 124
	'~'  shift 125
	'('  shift 57
	')'  reduce 261

	l_par  goto 126
	args  goto 127
	cexpr  goto 128
	varref  goto 129
	expr  goto 130
	cmpnd  goto 131
	pfld  goto 132
	ltl_expr  goto 133
	arg  goto 134


state 83
	inst : ACTIVE '[' NAME ']' .  (25)

	.  reduce 25


state 84
	const_expr : '-' const_expr .  (176)
	const_expr : const_expr . '+' const_expr  (178)
	const_expr : const_expr . '-' const_expr  (179)
	const_expr : const_expr . '*' const_expr  (180)
	const_expr : const_expr . '/' const_expr  (181)
	const_expr : const_expr . '%' const_expr  (182)

	.  reduce 176


state 85
	const_expr : l_par const_expr . r_par  (177)
	const_expr : const_expr . '+' const_expr  (178)
	const_expr : const_expr . '-' const_expr  (179)
	const_expr : const_expr . '*' const_expr  (180)
	const_expr : const_expr . '/' const_expr  (181)
	const_expr : const_expr . '%' const_expr  (182)

	'+'  shift 86
	'-'  shift 87
	'*'  shift 88
	'/'  shift 89
	'%'  shift 90
	')'  shift 135
	.  error

	r_par  goto 136


state 86
	const_expr : const_expr '+' . const_expr  (178)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 137


state 87
	const_expr : const_expr '-' . const_expr  (179)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 138


state 88
	const_expr : const_expr '*' . const_expr  (180)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 139


state 89
	const_expr : const_expr '/' . const_expr  (181)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 140


state 90
	const_expr : const_expr '%' . const_expr  (182)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 141


state 91
	inst : ACTIVE '[' const_expr ']' .  (24)

	.  reduce 24


state 92
	claim : CLAIM optname $$5 body .  (33)

	.  reduce 33


state 93
	body : '{' $$9 . sequence OS $$10 '}'  (57)
	vis : .  (68)

	error  shift 142
	ASSERT  shift 143
	PRINT  shift 144
	PRINTM  shift 145
	C_CODE  shift 2
	C_DECL  shift 3
	C_EXPR  shift 109
	RUN  shift 110
	LEN  shift 111
	ENABLED  shift 112
	SET_P  shift 146
	GET_P  shift 113
	PC_VAL  shift 114
	RETURN  shift 147
	GOTO  shift 148
	BREAK  shift 149
	ELSE  shift 150
	IF  shift 151
	DO  shift 152
	FOR  shift 153
	SELECT  shift 154
	ATOMIC  shift 155
	D_STEP  shift 156
	TIMEOUT  shift 115
	NONPROGRESS  shift 116
	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	FULL  shift 157
	EMPTY  shift 158
	NFULL  shift 159
	NEMPTY  shift 160
	CONST  shift 117
	XU  shift 161
	NAME  shift 162
	PNAME  shift 119
	INAME  shift 163
	SND  shift 120
	ALWAYS  shift 121
	EVENTUALLY  shift 122
	NEXT  shift 123
	'-'  shift 124
	'~'  shift 125
	'('  shift 57
	'{'  shift 164
	TYPE  reduce 68
	UNAME  reduce 68

	one_decl  goto 165
	l_par  goto 166
	full_expr  goto 167
	ccode  goto 168
	cexpr  goto 128
	sequence  goto 169
	step  goto 170
	stmnt  goto 171
	vis  goto 34
	varref  goto 172
	expr  goto 173
	cmpnd  goto 131
	pfld  goto 132
	Special  goto 174
	Stmnt  goto 175
	for_pre  goto 176
	ltl_expr  goto 133
	Expr  goto 177
	Probe  goto 178


state 94
	Opt_priority : PRIORITY CONST .  (227)

	.  reduce 227


state 95
	init : INIT $$3 Opt_priority body .  (27)

	.  reduce 27


state 96
	ltl_body : error .  (31)

	.  reduce 31


state 97
	ltl_body : '{' . full_expr OS '}'  (30)

	C_EXPR  shift 109
	RUN  shift 110
	LEN  shift 111
	ENABLED  shift 112
	GET_P  shift 113
	PC_VAL  shift 114
	TIMEOUT  shift 115
	NONPROGRESS  shift 116
	FULL  shift 157
	EMPTY  shift 158
	NFULL  shift 159
	NEMPTY  shift 160
	CONST  shift 117
	NAME  shift 118
	PNAME  shift 119
	SND  shift 120
	ALWAYS  shift 121
	EVENTUALLY  shift 122
	NEXT  shift 123
	'-'  shift 124
	'~'  shift 125
	'('  shift 57
	.  error

	l_par  goto 166
	full_expr  goto 179
	cexpr  goto 128
	varref  goto 129
	expr  goto 173
	cmpnd  goto 131
	pfld  goto 132
	ltl_expr  goto 133
	Expr  goto 177
	Probe  goto 178


state 98
	ltl : LTL optname2 $$4 ltl_body .  (29)

	.  reduce 29


state 99
	proc : inst proctype NAME $$1 . l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)

	'('  shift 57
	.  error

	l_par  goto 180


state 100
	asgn : ':' NAME . ASGN  (73)
	osubt : ':' NAME .  (76)

	ASGN  shift 181
	NAME  reduce 76


state 101
	one_decl : vis TYPE asgn '{' . nlst '}'  (79)

	NAME  shift 182
	.  error

	nlst  goto 183


state 102
	one_decl : vis TYPE osubt var_list .  (77)

	.  reduce 77


state 103
	vardcl : NAME '[' . const_expr ']'  (97)
	vardcl : NAME '[' . NAME ']'  (98)

	CONST  shift 59
	NAME  shift 184
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 185


state 104
	vardcl : NAME ':' . CONST  (96)

	CONST  shift 186
	.  error


state 105
	var_list : ivar ',' . var_list  (87)

	NAME  shift 75
	.  error

	var_list  goto 187
	ivar  goto 77
	vardcl  goto 78


state 106
	ivar : vardcl ASGN . '{' c_list '}'  (91)
	ivar : vardcl ASGN . expr  (92)
	ivar : vardcl ASGN . ch_init  (93)

	C_EXPR  shift 109
	RUN  shift 110
	LEN  shift 111
	ENABLED  shift 112
	GET_P  shift 113
	PC_VAL  shift 114
	TIMEOUT  shift 115
	NONPROGRESS  shift 116
	CONST  shift 117
	NAME  shift 118
	PNAME  shift 119
	SND  shift 120
	ALWAYS  shift 121
	EVENTUALLY  shift 122
	NEXT  shift 123
	'-'  shift 124
	'~'  shift 125
	'('  shift 57
	'['  shift 188
	'{'  shift 189
	.  error

	l_par  goto 126
	cexpr  goto 128
	varref  goto 129
	expr  goto 190
	ch_init  goto 191
	cmpnd  goto 131
	pfld  goto 132
	ltl_expr  goto 133


state 107
	decl_lst : one_decl .  (80)
	decl_lst : one_decl . SEMI decl_lst  (81)

	SEMI  shift 192
	')'  reduce 80
	'}'  reduce 80


state 108
	utype : TYPEDEF NAME '{' $$7 decl_lst . '}'  (41)

	'}'  shift 193
	.  error


state 109
	cexpr : C_EXPR .  (54)

	.  reduce 54


state 110
	expr : RUN . aname $$33 l_par args r_par Opt_priority  (207)

	NAME  shift 194
	PNAME  shift 195
	.  error

	aname  goto 196


state 111
	expr : LEN . l_par varref r_par  (208)

	'('  shift 57
	.  error

	l_par  goto 197


state 112
	expr : ENABLED . l_par expr r_par  (209)

	'('  shift 57
	.  error

	l_par  goto 198


state 113
	expr : GET_P . l_par expr r_par  (210)

	'('  shift 57
	.  error

	l_par  goto 199


state 114
	expr : PC_VAL . l_par expr r_par  (220)
